# wakeit

./: CMakeLists.txt  LICENSE.txt  README.md  manifest.json.in  wakeit.apparmor
app/: CMakeLists.txt  ModifyDialog.qml  wakeit.desktop.in  wakeit.qml
backend/: CMakeLists.txt  qmldir
backend/modules/WakeIt/: udpsocket.cpp  udpsocket.h
backend/src/: backend.cpp  backend.h  device.cpp  device.h  devicemodel.cpp  devicemodel.h
cmake/: Click.cmake
po/: CMakeLists.txt  fr.po  wakeit.pot
